oxiplate-derive/tests/broken/missing-if-expression.stderr
error: Expected an expression after `if`
 --> tests/broken/missing-if-expression.rs:4:26
  |
4 | #[oxiplate_inline("{% if %}")]
  |                          ^^
